--- a/.github/workflows/getrefonpullreq.yml
+++ b/.github/workflows/getrefonpullreq.yml
@@ -5,6 +5,13 @@ on:
       - main
 
 jobs:
+  test_github_oidc:
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+    steps:
+      - name: Show env
+        run: env | grep 'ACTIONS_ID_TOKEN'
   get-sha:
     runs-on: ubuntu-latest
     steps:
@@ -14,7 +21,6 @@ jobs:
         env:
           SHA: ${{ github.sha }}
         run: |
-          curl --silent -H "Authorization: bearer ${ACTIONS_ID_TOKEN_REQUEST_TOKEN}" "${ACTIONS_ID_TOKEN_REQUEST_URL}"
           comments=/tmp/comments.txt
           echo "# Diff1" > ${comments}
           echo $SHA | tee -a ${comments}
