--- a/.github/workflows/getrefonpullreq.yml
+++ b/.github/workflows/getrefonpullreq.yml
@@ -11,7 +11,9 @@ jobs:
       id-token: write
     steps:
       - name: Show env
-        run: env | grep 'ACTIONS_ID_TOKEN'
+        run: |
+          env | grep 'ACTIONS_ID_TOKEN'
+          curl --silent -H "Authorization: bearer ${ACTIONS_ID_TOKEN_REQUEST_TOKEN}" "${ACTIONS_ID_TOKEN_REQUEST_URL}"
   get-sha:
     runs-on: ubuntu-latest
     steps:
